--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
     <link rel="stylesheet" type="text/css" href="bower_components/ui-select/dist/select.min.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/ngDialog/css/ngDialog.min.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet/less" type="text/css" href="css/style.less" />
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/less/dist/less.min.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
