--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script src="bower_components/lodash/lodash.min.js"></script>
 
     <!--Just for the demo of ngAutocomplete-->
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+<!--    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>-->
     <!--Just for the demo of ngAutocomplete-->
 
 
