--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
     <link rel="stylesheet" type="text/css" href="bower_components/angularjs-toaster/toaster.min.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/flexslider/flexslider.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/ui-select/dist/select.min.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/ngDialog/css/ngDialog.min.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
@@ -26,6 +27,8 @@
     <script src="bower_components/less/dist/less.min.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
+    
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
@@ -37,6 +40,7 @@
     <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
     <script src="bower_components/ngDialog/js/ngDialog.min.js"></script>
     <script src="bower_components/angular-social/angular-social.js"></script>
+    <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
     <script src="bower_components/valdr/valdr.min.js"></script>
     <script src="bower_components/valdr/valdr-message.min.js"></script>
     <script src="bower_components/ngAutocomplete/src/ngAutocomplete.js"></script>
