--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="bower_components/moment/min/moment.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit" async defer></script>
     
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
@@ -48,9 +49,10 @@
     <script src="bower_components/caman/dist/caman.full.min.js"></script>
     <script src="bower_components/caman/dist/caman.min.js"></script>
     <script src="bower_components/lodash/lodash.min.js"></script>
+    <script src="bower_components/angular-recaptcha/release/angular-recaptcha.min.js"></script>
 
     <!--Just for the demo of ngAutocomplete-->
-    <!--    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>-->
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <!--Just for the demo of ngAutocomplete-->
 
 
