--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
     <script src="js/templateservice.js"></script>
     <script src="js/navigation.js"></script>
 
+   
+<!--
+    <link rel="stylesheet" type="text/css" href="w/w.css" />
+    <script src="w/w.js"></script>
+-->
+   
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
