--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title ng-bind="'Fynx - '+template.title">Fynx</title>
+    <title ng-bind="'Project Name - '+template.title">Project Name</title>
 
     <link rel="shortcut icon" href="img/favicon.ico" />
     
-    <link rel="stylesheet/less" type="text/less" href="less/style.less" />
+    <link rel="stylesheet" type="text/less" href="w/w.css" />
     <!--<script src="w/w.css"></script>-->
     <script src="w/w.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit" async defer></script>
 
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
