--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" href="img/favicon.ico" />
     
-    <link rel="stylesheet" type="text/less" href="w/w.css" />
+    <link rel="stylesheet" type="text" href="w/w.css" />
     <!--<script src="w/w.css"></script>-->
     <script src="w/w.js"></script>
 
