--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" href="img/favicon.ico" />
     
-    <link rel="stylesheet" type="text" href="w/w.css" />
+    <link rel="stylesheet" type="text" href="css/main.css" />
     <!--<script src="w/w.css"></script>-->
     <script src="w/w.js"></script>
 
@@ -23,6 +23,7 @@
 
 <body>
 
+   <h1>Chintan SHAH</h1>
     <div class="repeated-item" ui-view></div>
 
 </body>
