changes for gulpproduction

--- a/indexproduction.html
+++ b/indexproduction.html
@@ -11,9 +11,9 @@
 
     <link rel="shortcut icon" href="img/favicon.ico" />
     
-    <link rel="stylesheet" type="text" href="w/css/main.css" />
+    <link rel="stylesheet" type="text" href="main.css" />
     <!--<script src="w/w.css"></script>-->
-    <script src="w/w.js"></script>
+    <script src="w.js"></script>
 
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -23,7 +23,6 @@
 
 <body>
 
-   <h1>Chintan SHAH</h1>
     <div class="repeated-item" ui-view></div>
 
 </body>
