--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
     <title ng-bind="'Project Name - '+template.title">Project Name</title>
 
     <link rel="shortcut icon" href="img/favicon.ico" />
-    
-    <link rel="stylesheet" type="text" href="w/css/main.css" />
-    <!--<script src="w/w.css"></script>-->
-    <script src="w/w.js"></script>
+
+    <link rel="stylesheet" type="text" href="css/main.css" />
+
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+
+    <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
+
+
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/lodash/lodash.min.js"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/navigation.js"></script>
+    <script src="js/templateservice.js"></script>
 
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -23,7 +40,6 @@
 
 <body>
 
-   <h1>Chintan SHAH</h1>
     <div class="repeated-item" ui-view></div>
 
 </body>
