--- a/indexproduction.html
+++ b/indexproduction.html
@@ -2,6 +2,8 @@
 <html lang="en" ng-app="firstapp">
 
 <head ng-controller="headerctrl">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
