--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+    <script src="bower_components/fancyBox/source/jquery.fancybox.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
