--- a/indexproduction.html
+++ b/indexproduction.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <title ng-bind="'Project Name - '+template.title">Project Name</title>
     <link rel="shortcut icon" href="img/favicon.ico" />
-    <link rel="stylesheet" type="text" href="w.css" />
+    <link rel="stylesheet" type="text/css" href="w.css" />
     <script>
       var isproduction=true;
     </script>
