--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/language.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/templateservice.js"></script>
