--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title ng-bind="'Project Name - '+template.title">Project Name</title>
+    <title ng-bind="'Project Name | '+template.title">Project Name</title>
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <script>
@@ -17,7 +17,7 @@
     <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <script src="bower_components/fancyBox/source/jquery.fancybox.js"></script>
-    
+
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
@@ -25,8 +25,10 @@
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/angulartics/dist/angulartics.min.js"></script>
+    <script src="bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/language.js"></script>
@@ -40,5 +42,12 @@
 </head>
 <body>
     <div class="repeated-item" ui-view></div>
+    <script>
+  	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    	ga('create', 'UA-77872125-3', { 'cookieDomain': 'none' });
+	  </script>
 </body>
 </html>
