Welcome to the Family -> Swiper
Hello Swiper

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <script>
       var isproduction=false;
     </script>
+
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <script src="bower_components/fancyBox/source/jquery.fancybox.js"></script>
+    <script src="bower_components/swiper/dist/js/swiper.js"></script>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -29,6 +31,7 @@
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angulartics/dist/angulartics.min.js"></script>
     <script src="bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
+    <script src="bower_components/angular-swiper/dist/angular-swiper.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/language.js"></script>
