Smart App Banner

--- a/indexproduction.html
+++ b/indexproduction.html
@@ -7,8 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL"> -->
     <title ng-bind="'Project Name | '+template.title">Project Name</title>
+
+    <!-- Smart App Banner -->
+    <meta name="apple-itunes-app" content="app-id=310633997">
+    <meta name="google-play-app" content="app-id=com.whatsapp">
+    <link rel="apple-touch-icon" href="http://www.tivix.com/uploads/blog_pics/square.png">
+    <link rel="android-touch-icon" href="http://www.tivix.com/uploads/blog_pics/square.png" />
 
     <!-- SEO -->
     <meta name="author" content="">
@@ -45,6 +50,13 @@
 <body>
 
     <div class="repeated-item" ui-view></div>
+    <!-- <script type="text/javascript">
+     new SmartBanner({
+         daysHidden: 1,
+         title: 'AngularFrameworkFrontend',
+         author: 'Wohlig Technology'
+     });
+   </script> -->
     <script>
   	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
