Man Mai Hai Vishwas

--- a/indexproduction.html
+++ b/indexproduction.html
@@ -10,10 +10,10 @@
     <title ng-bind="'Project Name | '+template.title">Project Name</title>
 
     <!-- Smart App Banner -->
-    <meta name="apple-itunes-app" content="app-id=310633997">
+    <!-- <meta name="apple-itunes-app" content="app-id=310633997">
     <meta name="google-play-app" content="app-id=com.whatsapp">
     <link rel="apple-touch-icon" href="http://www.tivix.com/uploads/blog_pics/square.png">
-    <link rel="android-touch-icon" href="http://www.tivix.com/uploads/blog_pics/square.png" />
+    <link rel="android-touch-icon" href="http://www.tivix.com/uploads/blog_pics/square.png" /> -->
 
     <!-- SEO -->
     <meta name="author" content="">
