--- a/index.html
+++ b/index.html
@@ -14,30 +14,34 @@
       var isproduction=false;
     </script>
 
+    <!-- JS Libs -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
-    <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <script src="bower_components/fancyBox/source/jquery.fancybox.js"></script>
     <script src="bower_components/swiper/dist/js/swiper.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
 
+    <!-- Angular Libs -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angulartics/dist/angulartics.min.js"></script>
     <script src="bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
     <script src="bower_components/angular-swiper/dist/angular-swiper.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
 
+    <!-- Custom Libs -->
     <script src="js/app.js"></script>
     <script src="js/language.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/templateservice.js"></script>
+
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
