--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
+    <script src="bower_components/tether/dist/js/tether.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/fancyBox/source/jquery.fancybox.js"></script>
     <script src="bower_components/swiper/dist/js/swiper.js"></script>
